Add environment configuration file and update requirements for manifest generation. Introduced Docker Compose templates for n8n, Redis, and Supabase services, ensuring consistent service definitions. Added setup and start scripts for manifest-based deployment, enhancing the overall setup process. Updated documentation to reflect new features and structure.

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ nats-py==2.7.2               # NATS client
 python-dotenv==1.0.1         # load .env files
 requests==2.32.3             # basic HTTP requests
 httpx==0.27.0                # async HTTP client
+PyYAML==6.0.1                # YAML parsing for manifest generator
 
 # --- Testing & Dev ---
 pytest==8.3.2
